*** empty log message ***

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -669,10 +669,10 @@ project:
 		</TR>
 		<TR>
 			<TD WIDTH=30% BGCOLOR="#ffffff">
-				<P CLASS="western" ALIGN=CENTER><FONT COLOR="#0085c0"><A HREF="http://www.appligent.com/"><FONT COLOR="#0085c0"><IMG SRC="images/appligent.jpg" NAME="Graphic39" ALT="Appligent" ALIGN=BOTTOM WIDTH=196 HEIGHT=67 BORDER=1></FONT></A></FONT></P>
+				<P CLASS="western" ALIGN=CENTER><FONT COLOR="#0085c0"><A HREF="http://promote.pair.com/direct.pl?imagemagick.org"><FONT COLOR="#0085c0"><IMG SRC="images/pair.jpg" NAME="Graphic39" ALT="Pair" ALIGN=BOTTOM WIDTH=120 HEIGHT=60 BORDER=1></FONT></A></FONT></P>
 			</TD>
 			<TD WIDTH=70% BGCOLOR="#ffffff">
-				<P CLASS="western">Technology provider for e-Paper solutions.</P>
+				<P CLASS="western">World Class Web Hosting.</P>
 			</TD>
 		</TR>
 	</TABLE>
