*** empty log message ***

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -669,7 +669,7 @@ project:
 		</TR>
 		<TR>
 			<TD WIDTH=30% BGCOLOR="#ffffff">
-				<P CLASS="western" ALIGN=CENTER><FONT COLOR="#0085c0"><A HREF="http://promote.pair.com/direct.pl?imagemagick.org"><FONT COLOR="#0085c0"><IMG SRC="images/pair.jpg" NAME="Graphic39" ALT="Pair" ALIGN=BOTTOM WIDTH=120 HEIGHT=60 BORDER=1></FONT></A></FONT></P>
+				<P CLASS="western" ALIGN=CENTER><FONT COLOR="#0085c0"><A HREF="http://promote.pair.com/direct.pl?imagemagick.org"><FONT COLOR="#0085c0"><IMG SRC="images/pair.png" NAME="Graphic39" ALT="Pair" ALIGN=BOTTOM WIDTH=120 HEIGHT=60 BORDER=1></FONT></A></FONT></P>
 			</TD>
 			<TD WIDTH=70% BGCOLOR="#ffffff">
 				<P CLASS="western">World Class Web Hosting.</P>
