*** empty log message ***

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -31,6 +31,9 @@
 </HEAD>
 <BODY LANG="en-US" TEXT="#000000" LINK="#0085c0" VLINK="#800080" BGCOLOR="#ffffff">
 <HR>
+<A HREF="http://promote.pair.com/direct.pl?imagemagick.org">
+  <IMG SRC="images/promote.png" ALT="Pair" ALIGN=RIGHT WIDTH=120 HEIGHT=60
+   BORDER=0></A>
 <FORM ACTION="http://www.google.com/search">
 	<INPUT TYPE=HIDDEN NAME="domains" VALUE="www.imagemagick.org">
 	<INPUT TYPE=HIDDEN NAME="sitesearch" VALUE="www.imagemagick.org">
