--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -10,6 +10,9 @@
 <link rev="made" href="mailto:magick@wizards.dupont.com">
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#1F00FF" vlink="#9900DD" alink="#FF0000">
+<A HREF="http://promote.pair.com/direct.pl?imagemagick.org">
+  <IMG SRC="../images/promote.png" ALIGN=RIGHT WIDTH=120
+    HEIGHT=60 BORDER=0></A>
 
 <center><img SRC="../images/magick_small.png" width=129 height=133></center>
 <p>
