--- a/www/color.html
+++ b/www/color.html
@@ -9,6 +9,9 @@
    <link rel="StyleSheet" href="magick.css" type="text/css">
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#0085c0" vlink="#800080" alink="#0085c0" >
+<A HREF="http://promote.pair.com/direct.pl?imagemagick.org">
+  <IMG SRC="../images/promote.png" ALIGN=RIGHT WIDTH=120
+    HEIGHT=60 BORDER=0></A>
 <center>
 <img src="../images/magick_small.png" alt="" align=bottom width="114" height="118">
 </center>
