--- a/www/install.html
+++ b/www/install.html
@@ -5,6 +5,9 @@
 <title>ImageMagick: install</title>
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
+<A HREF="http://promote.pair.com/direct.pl?imagemagick.org">
+  <IMG SRC="../images/promote.png" ALIGN=RIGHT WIDTH=120
+    HEIGHT=60 BORDER=0></A>
 <p>
   "I swear by my life and my love of it that I will never live for the
    sake of another man, nor ask another man to live for mine"
