--- a/www/Copyright.html
+++ b/www/Copyright.html
@@ -16,6 +16,9 @@
 	</STYLE>
 </HEAD>
 <BODY LANG="en-US" TEXT="#000000" LINK="#0000ee" VLINK="#551a8b" BGCOLOR="#ffffff">
+<A HREF="http://promote.pair.com/direct.pl?imagemagick.org">
+  <IMG SRC="../images/promote.png" ALIGN=RIGHT WIDTH=120
+    HEIGHT=60 BORDER=0></A>
 <center><img SRC="../images/magick_small.png" alt="" width="114" height="118"></center>
 
 <P>Copyright (C) 2002 ImageMagick Studio, a non-profit organization
