--- a/www/archives.html
+++ b/www/archives.html
@@ -22,6 +22,9 @@
 	</STYLE>
 </HEAD>
 <BODY LANG="en-US" TEXT="#000000" LINK="#0085c0" VLINK="#800080" BGCOLOR="#ffffff">
+<A HREF="http://promote.pair.com/direct.pl?imagemagick.org">
+  <IMG SRC="../images/promote.png" ALIGN=RIGHT WIDTH=120
+    HEIGHT=60 BORDER=0></A>
 <P ALIGN=CENTER><IMG SRC="../images/magick_small.png" NAME="Graphic1" ALIGN=BOTTOM WIDTH=114 HEIGHT=118 BORDER=0></P>
 <P STYLE="margin-bottom: 0in">The source distribution of <B>ImageMagick</B>
 as well as pre-compiled binaries are available at any of the sites
