*** empty log message ***

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -561,7 +561,7 @@ supported by third parties.</P>
 		<COL WIDTH=162*>
 		<TR VALIGN=TOP>
 			<TD WIDTH=37%>
-				<P CLASS="western" ALIGN=LEFT><A HREF="http://www.imagemagick.org/MagickStudio/scripts/MagickStudio.cgi">ImageMagick
+				<P CLASS="western" ALIGN=LEFT><A HREF="http://mystic.imagemagick.org/MagickStudio/scripts/MagickStudio.cgi">ImageMagick
 				Studio</A></P>
 			</TD>
 			<TD WIDTH=63%>
