*** empty log message ***

--- a/www/archives.html
+++ b/www/archives.html
@@ -168,7 +168,7 @@ table:</P>
 		<TR VALIGN=TOP>
 			<TD WIDTH=16% BGCOLOR="#ffffff">
 				<P ALIGN=RIGHT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
-				<FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>xp</FONT></FONT></P>
+				<FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>windows</FONT></FONT></P>
 			</TD>
 			<TD WIDTH=84% BGCOLOR="#ffffff">
 				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
