--- a/www/display.html
+++ b/www/display.html
@@ -1403,7 +1403,7 @@ For example to display the fourth page preceding the current page, press
              the image.
     Ctl-V    Press to <a href="#impa">paste</a> a region to
              the image.
-    &amp;lt;     Press to halve the image size.
+    &lt;     Press to halve the image size.
     .        Press to return to the original image size.
     &gt;        Press to double the image size.
     %        Press to resize the image to a width and height
