Updated -debug in identify docs, fixed < typo in display docs, added ALT attribute to pair.com SRC tags, elaborated on gray:raw example in convert docs.

--- a/www/identify.html
+++ b/www/identify.html
@@ -23,7 +23,7 @@
 <body bgcolor="#FFFFFF" text="#000000" link="#0085c0" vlink="#800080" alink="#0085c0" >
 <A HREF="http://promote.pair.com/direct.pl?imagemagick.org">
   <IMG SRC="../images/promote.png" ALIGN=RIGHT WIDTH=120
-    HEIGHT=60 BORDER=0></A>
+    HEIGHT=60 BORDER=0 ALT="pair.com logo"></A>
 <center>
 <img SRC="../images/magick_small.png" alt="" width=114 height=118>
 </center>
@@ -122,6 +122,10 @@ comment:
     comments:
     Imported from MTV raster image: aquarium.mtv
 </pre>
+<p>
+For some formats, additional format-specific information about the file
+will be written if the <tt>-debug coder</tt> or <tt>-debug all</tt> option
+is used.
 </td></tr></table>
      <p>
 <i><a href="#top">Back to Contents</a></i> 
