--- a/www/convert.html
+++ b/www/convert.html
@@ -23,7 +23,7 @@
 <body bgcolor="#FFFFFF" text="#000000" link="#0085c0" vlink="#800080" alink="#0085c0" >
 <A HREF="http://promote.pair.com/direct.pl?imagemagick.org">
   <IMG SRC="../images/promote.png" ALIGN=RIGHT WIDTH=120
-    HEIGHT=60 BORDER=0></A>
+    HEIGHT=60 BORDER=0 ALT="pair.com logo"></A>
 <center>
 <img SRC="../images/magick_small.png" alt="" width=114 height=118>
 </center>
@@ -161,6 +161,12 @@ use:
 <pre>
     convert -depth 8 -size 768x512+128 gray:raw image.pgm
 </pre>
+<p>
+In this example, "raw" is the input file.  Its format is "gray" and it
+has the dimensions and number of header bytes specified by the -size
+option and the sample depth specified by the
+-depth option.  The output file is "image.pgm".  The suffix ".pgm"
+specifies its format.
 <p>
 To convert a Photo CD image to a TIFF image, use:
 <pre>
