--- a/www/montage.html
+++ b/www/montage.html
@@ -23,7 +23,7 @@
 <body bgcolor="#FFFFFF" text="#000000" link="#0085c0" vlink="#800080" alink="#0085c0" >
 <A HREF="http://promote.pair.com/direct.pl?imagemagick.org">
   <IMG SRC="../images/promote.png" ALIGN=RIGHT WIDTH=120
-    HEIGHT=60 BORDER=0></A>
+    HEIGHT=60 BORDER=0 ALT="pair.com logo"></A>
 <center>
 <img SRC="../images/magick_small.png" alt="" width=114 height=118>
 </center>
