--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -2123,7 +2123,9 @@ width=15><b><font face="Helvetica, Arial"
 Perform local adaptive thresholding using the specified radius, sigma,
 and offset.  The offset is a distance in sample space from the mean,
 as an absolute integer ranging from 0 to the maximum sample value or
-as a percentage.</font></td></tr></table>
+as a percentage.
+For reasonable results, radius should be larger than sigma.  Use a radius
+of 0 to have the method select a suitable radius.</font></td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
