*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -1779,6 +1779,11 @@ Delegate</i> is missing</td>
   <td>pixels could not be saved to the pixel cache</td>
  </tr>
   <tr>
+ <td>350</td>
+  <td>ImageWarning</td>
+  <td>the operation could not complete due to an incompatible image</td>
+ </tr>
+  <tr>
  <td>380</td>
   <td>XServerWarning</td>
   <td>an X resource is unavailable</td>
@@ -1848,6 +1853,11 @@ Delegate</i> is missing</td>
  <td>445</td>
   <td>CacheError</td>
   <td>pixels could not be saved to the pixel cache</td>
+ </tr>
+  <tr>
+ <td>450</td>
+  <td>ImageError</td>
+  <td>the operation could not complete due to an incompatible image</td>
  </tr>
   <tr>
  <td>480</td>
