*** empty log message ***

--- a/www/archives.html
+++ b/www/archives.html
@@ -194,9 +194,9 @@ table:</P>
 </DL>
 <P STYLE="margin-bottom: 0in">If you operate an ImageMagick mirror
 site, or know of additional mirrors of the <A HREF="http://www.imagemagick.org/">ImageMagick</A>
-archives, please E-mail <A HREF="mailto:sponsor-01@imagemagick.org">ImageMagick
-Studio</A> so that they can be listed here. Known mirror sites are
-provided with privileged access to the master site so that they are
+archives, please E-mail <A HREF="mailto:magick-users@imagemagick.org">
+ImageMagick Studio</A> so that they can be listed here. Known mirror sites
+are provided with privileged access to the master site so that they are
 not denied access when the default user limit has been reached.</P>
 <P ALIGN=CENTER STYLE="margin-bottom: 0in"><B>ImageMagick Download
 Sites</B></P>
