--- a/www/perl.html
+++ b/www/perl.html
@@ -1780,6 +1780,21 @@ Delegate</i> is missing</td>
  </tr>
   <tr>
  <td>350</td>
+  <td>CoderWarning</td>
+  <td>there was a problem with an image coder</td>
+ </tr>
+  <tr>
+ <td>355</td>
+  <td>ModuleWarning</td>
+  <td>there was a problem with an image module</td>
+ </tr>
+  <tr>
+ <td>360</td>
+  <td>DrawWarning</td>
+  <td>a drawing operation failed</td>
+ </tr>
+  <tr>
+ <td>365</td>
   <td>ImageWarning</td>
   <td>the operation could not complete due to an incompatible image</td>
  </tr>
@@ -1856,6 +1871,21 @@ Delegate</i> is missing</td>
  </tr>
   <tr>
  <td>450</td>
+  <td>CoderError</td>
+  <td>there was a problem with an image coder</td>
+ </tr>
+  <tr>
+ <td>455</td>
+  <td>ModuleError</td>
+  <td>there was a problem with an image module</td>
+ </tr>
+  <tr>
+ <td>460</td>
+  <td>DrawError</td>
+  <td>a drawing operation failed</td>
+ </tr>
+  <tr>
+ <td>465</td>
   <td>ImageError</td>
   <td>the operation could not complete due to an incompatible image</td>
  </tr>
