Update links to Windows binaries.

--- a/www/QuickStart.html
+++ b/www/QuickStart.html
@@ -284,7 +284,10 @@ path&gt;/../lib/ImageMagick/modules/coders/</P>
 	</TR>
 </TABLE>
 <P>Download</P>
-<P CLASS="code-western"><A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-5.4.9-i686-pc-windows.exe">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-5.4.9-i686-pc-windows.exe</A></P>
+<P CLASS="code-western"><A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-i686-pc-windows.exe">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-i686-pc-windows.exe</A>
+or
+<A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-i686-Q8-windows.exe">ftp://ftp.imagemagick.org/pub/ImageMagick/binaries/ImageMagick-i686-Q8-windows.exe</A>
+</P>
 <P>and execute it from the Windows Command Shell, double-click from
 Windows Explorer, or just &quot;open&quot; it from your browser, to
 start the installation program.</P>
