*** empty log message ***

--- a/www/magick-list.html
+++ b/www/magick-list.html
@@ -25,7 +25,7 @@
     HEIGHT=60 BORDER=0></A>
 <P ALIGN=CENTER><IMG SRC="../images/magick_small.png" NAME="Graphic1" ALIGN=BOTTOM WIDTH=114 HEIGHT=118 BORDER=0>
 </P>
-<P>The <A HREF="http://www.imagemagick.org/magick/ImageMagick/">ImageMagick</A>
+<P>The <A HREF="http://www.imagemagick.org/">ImageMagick</A>
 mailing list are a low noise and subject oriented. The subject is the
 discussion of ImageMagick software and its use. Although the lists
 are unmoderated, do not post off-topic or test messages to the lists.
