--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -7,6 +7,12 @@
 This file records noteworthy changes in Magick++.
 
 <p>
+(5.5.2)<BR>
+<UL>
+  <LI> Nothing to report.
+
+</UL>
+<p>
 (5.5.1)<BR>
 <UL>
   <LI> Fixed a Color memory allocation problem which became evident when
