*** empty log message ***

--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,13 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-10-31  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Added configure test for compiler __func__ support (HAS___func__).
+  * Added configure test for ftime().
+
+2002-10-31  Leonard Rosenthol &lt;leonardr@lazerware.com&gt;
+  * CMYK + alpha layered PSD files now correctly read!
+
 2002-10-30  Leonard Rosenthol &lt;leonardr@lazerware.com&gt;
   * ReadPSDImage() is now fully instrumented with logging
   * Fixed long standing bug in ReadPSDImage, so it no longer 
