--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -1038,7 +1038,8 @@ The <tt>events</tt> parameter specifies which events are to be logged.  It
 can be either <tt>None</tt>, <tt>All</tt>, or a comma-separated list
 consisting of one or more of the following domains: <tt>Annotate</tt>,
 <tt>Blob</tt>, <tt>Cache</tt>, <tt>Coder</tt>, <tt>Configure</tt>,
-<tt>Locale</tt>, <tt>Render</tt>, <tt>X11</tt>, or <tt>User</tt>.
+<tt>Locale</tt>, <tt>Render</tt>, <tt>Transform</tt>,
+<tt>X11</tt>, or <tt>User</tt>.
 For example, to log cache and blob events, use</font></td></tr></table>
 <pre>
     convert -debug "Cache,Blob" rose: rose.png
@@ -2190,6 +2191,43 @@ Choices are: <strong>Delegate</strong>, <strong>Format</strong>, <strong>Magic</
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
 This option lists entries from the ImageMagick configuration files.
 </font></td></tr></table>
+<table BORDER=0 WIDTH="94%">
+<tr>
+<td width="3%"><br></td> 
+<td ALIGN=LEFT BGCOLOR="#9EBAC6">
+<img SRC="../images/right_triangle_option.png"
+ALT=">" BORDER=0 height=14
+width=15><b><font face="Helvetica, Arial"
+><font color="#FFFFFF"><font size="+1">
+    <a name="details-log"></a>-log <i>&lt;string&gt;</i>
+</font></font></font></b></td></tr></table>
+<table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
+This option specifies the format for the log printed when the <strong>-debug</strong>
+option is active.</font></td></tr></table>
+<table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
+You can display the following components by embedding
+special format characters:</font></td></tr></table>
+<pre>
+     %d   domain
+     %e   event
+     %f   function
+     %l   line
+     %m   module
+     %p   process ID
+     %r   real CPU time
+     %t   wall clock time
+     %u   user CPU time
+     %%   percent sign
+     \n   newline
+     \r   carriage return
+</pre>
+<table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
+For example:</font></td></tr></table>
+<pre>
+    convert -debug coders -log "%u %m:%l %e" in.gif out.png
+</pre>
+<table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
+The default behavior is to print all of the components.</font></td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
