--- a/www/perl.html
+++ b/www/perl.html
@@ -1635,10 +1635,10 @@ and opacity value. <br>
                                               <p> <pre>&nbsp;&nbsp;&nbsp; @colors = $image-&gt;QueryColor();<br>&nbsp;&nbsp;&nbsp; ($red, $green, $blue, $opacity) = $image-&gt;QueryColor('cyan');<br>&nbsp;&nbsp;&nbsp; ($red, $green, $blue, $opacity) = $image-&gt;QueryColor('#716bae');<br></pre>
   </p>
                                               </dl>
- QueryColorName() accepts a color value and returns its respective name or
+ QueryColorname() accepts a color value and returns its respective name or
 hex value;<br>
                                               <dl>
-                                              <pre>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $name = $image-&gt;QueryColorName('rgba(80,60,0,0)');</pre>
+                                              <pre>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $name = $image-&gt;QueryColorname('rgba(80,60,0,0)');</pre>
                                               <p> </p>
                                               </dl>
  Call QueryFont() with no parameters to return a list of known fonts or specify
