*** empty log message ***

--- a/www/formats.html
+++ b/www/formats.html
@@ -724,7 +724,7 @@ Image Formats</B></FONT></P>
 			<TD WIDTH=51% BGCOLOR="#ffffff">
 				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
 				<FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>Requires
-				<A HREF="http://www.ece.ubc.ca/~mdadams/jasper/">jasper-1.500.0.zip</A></FONT></FONT></P>
+				<A HREF="http://www.ece.uvic.ca/~mdadams/jasper/">jasper-1.500.0.zip</A></FONT></FONT></P>
 			</TD>
 		</TR>
 		<TR>
