--- a/www/api.html
+++ b/www/api.html
@@ -156,6 +156,9 @@ Resource Consumption Methods</a></dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/monitor.html">ImageMagick
 Progress Monitor Methods</a></dd>
 
+<dd>
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/deprecate.html">ImageMagick
+Deprecated Methods</a></dd>
 </dl>
 <p>
 
