--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,18 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-11-05  Glenn Randers-Pehrson &lt;randeg@alum.rpi.edu&gt;
+  * There are now separate ReadMNGImage() and ReadPNGImage() methods that
+    call ReadOnePNGImage(); likewise for Write.  Some compilers optimize
+    this better.
+
+2002-11-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Modified IMdisplay so that larger images may be loaded (primarily
+    limited by Windows bitmap size limits).
+  * Added some more file types (EPS, GIF, MIFF, SVG, & WMF) to IMdisplay's
+    file open list.
+  * The list management methods were given more meaningful names.
+
 2002-11-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * Modified IMdisplay so that Magick++ Images are stored by value rather
     than via pointer.
