--- a/www/perl.html
+++ b/www/perl.html
@@ -341,8 +341,8 @@ And here is a list of other image manipulation methods you can call:<br>
  </tr>
   <tr>
  <td>AdaptiveThreshold</td>
-  <td>geometry=&gt;<i>geometry</i>, radius=&gt;<i>double</i>, sigma=&gt;<i>
-double</i>, offset=&gt;<i>double</i></td>
+  <td>geometry=&gt;<i>geometry</i>, width=&gt;<i>integer</i>, height=&gt;<i>
+integer</i>, offset=&gt;<i>integer</i></td>
   <td>local adaptive thresholding.</td>
  </tr>
   <tr>
