--- a/www/Magick++/ChangeLog.html
+++ b/www/Magick++/ChangeLog.html
@@ -4,6 +4,13 @@
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
+2002-11-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> lib/Image.cpp (adaptiveThreshold): New method.
+
+</UL>
+<p>
 2002-10-01  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
