--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -9,7 +9,7 @@ This file records noteworthy changes in Magick++.
 <p>
 (5.5.2)<BR>
 <UL>
-  <LI> Nothing to report.
+  <LI> Added adaptiveThreshold() method.
 
 </UL>
 <p>
