*** empty log message ***

--- a/www/api.html
+++ b/www/api.html
@@ -90,6 +90,10 @@ Text Attributes Methods</a></dd>
 to Annotate an Image</a></dd>
 
 <dd>
+<img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/paint.html">Methods
+to Paint on an Image</a></dd>
+
+<dd>
 <img SRC="../images/ball.png" ALT="*" height=14 width=14> <a href="api/render.html">Methods
 to Draw on an Image</a></dd>
 
