*** empty log message ***

--- a/www/archives.html
+++ b/www/archives.html
@@ -264,6 +264,40 @@ Sites</B></P>
 		</TR>
 		<TR>
 			<TD WIDTH=32% BGCOLOR="#ffffff">
+				<P ALIGN=LEFT><A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>ftp.imagemagick.org</FONT></SPAN></A></P>
+			</TD>
+			<TD WIDTH=9% BGCOLOR="#ffffff">
+				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
+				<FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>6</FONT></FONT></P>
+			</TD>
+			<TD WIDTH=14% BGCOLOR="#ffffff">
+				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
+				<FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>Pittsburg, PA USA</FONT></FONT></P>
+			</TD>
+			<TD WIDTH=45% BGCOLOR="#ffffff">
+				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
+				<FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>&nbsp;</FONT></FONT></P>
+			</TD>
+		</TR>
+		<TR>
+			<TD WIDTH=32% BGCOLOR="#ffffff">
+				<P ALIGN=LEFT><A HREF="ftp://ftp.crc.ca/pub/packages/graphics/imagemagick/"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>ftp.crc.ca</FONT></SPAN></A></P>
+			</TD>
+			<TD WIDTH=9% BGCOLOR="#ffffff">
+				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
+				<FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>15</FONT></FONT></P>
+			</TD>
+			<TD WIDTH=14% BGCOLOR="#ffffff">
+				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
+				<FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>Canada</FONT></FONT></P>
+			</TD>
+			<TD WIDTH=45% BGCOLOR="#ffffff">
+				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
+				<FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>&nbsp;</FONT></FONT></P>
+			</TD>
+		</TR>
+		<TR>
+			<TD WIDTH=32% BGCOLOR="#ffffff">
 				<P ALIGN=LEFT><A HREF="ftp://ftp.yggdrasil.com/mirrors/site/ftp.simplesystems.org/pub/ImageMagick/"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>ftp.yggdrasil.com</FONT></SPAN></A></P>
 			</TD>
 			<TD WIDTH=9% BGCOLOR="#ffffff">
