Added colorMapSize method.

--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -10,6 +10,7 @@ This file records noteworthy changes in Magick++.
 (5.5.2)<BR>
 <UL>
   <LI> Added adaptiveThreshold() method.
+  <LI> Added colorMapSize() method.
 
 </UL>
 <p>
