--- a/www/archives.html
+++ b/www/archives.html
@@ -264,7 +264,7 @@ Sites</B></P>
 		</TR>
 		<TR>
 			<TD WIDTH=32% BGCOLOR="#ffffff">
-				<P ALIGN=LEFT><A HREF="ftp://ftp.imagemagick.org/pub/ImageMagick/"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>ftp.imagemagick.org</FONT></SPAN></A></P>
+				<P ALIGN=LEFT><A HREF="ftp://qs429.pair.com/pub/ImageMagick/"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>qs429.pair.com</FONT></SPAN></A></P>
 			</TD>
 			<TD WIDTH=9% BGCOLOR="#ffffff">
 				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
