Fixed indenting of -dispose option.

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -1200,11 +1200,13 @@ be treated after being displayed.</font></td></tr></table>
 Here are the valid methods:
 </font></td></tr></table>
 <pre>
-Undefined       No disposal specified.
-None            Do not dispose between frames.
-Background      Overwrite the image area with background color
-Previous        Overwrite the image area with what was there
-                prior to rendering the image.
+    Undefined       No disposal specified.
+    None            Do not dispose between frames.
+    Background      Overwrite the image area with
+                    the background color.
+    Previous        Overwrite the image area with
+                    what was there prior to rendering
+                    the image.
 </pre>
 <table BORDER=0 WIDTH="94%">
 <tr>
