--- a/www/FAQ.html
+++ b/www/FAQ.html
@@ -133,6 +133,8 @@
 	files larger than expected?</A></P>
 	<LI><P STYLE="margin-bottom: 0.08in"><A HREF="#C31">Why are my JPEG
 	files larger than expected?</A></P>
+	<LI><P STYLE="margin-bottom: 0.08in"><A HREF="#C32">How do I extract
+	a single image from a multi-image file?</A></P>
 </OL>
 <P STYLE="border-top: none; border-bottom: 3.55pt double #808080; border-left: none; border-right: none; padding-top: 0in; padding-bottom: 0.02in; padding-left: 0in; padding-right: 0in">
 <BR><BR>
@@ -792,8 +794,6 @@ because of the UniSys patent. You can rebuild ImageMagick with it
 enabled, after you have obtained a license from UniSys. Or you can
 use a third-party commercial UniSys-licensed application to
 recompress them. 
-</DD><DD STYLE="margin-left: 0in">
-<BR>
 </DD><HR SIZE=5>
 <DL>
 	<DT STYLE="margin-bottom: 0.2in"><A NAME="C31"></A><B>31. Why are my
@@ -803,6 +803,18 @@ Your JPEG files may contain embedded &quot;profiles&quot; such as
 Exif or IPTC, or they may contain uncompressed thumbnails. You can
 use the <FONT FACE="Cumberland">+profile &quot;*&quot;</FONT>
 commandline option or an equivalent API method to remove them. 
+<BR>
+</DD><HR SIZE=5>
+<DL>
+	<DT STYLE="margin-bottom: 0.2in"><A NAME="C32"></A><B>32. How do I
+extract a single image from a multi-image file?</B></DT></DL>
+<DD STYLE="margin-left: 0in; font-weight: medium">
+Use a square-bracket syntax to indicate which frame or frames you want.
+For example,
+</DD><PRE> convert "Image.gif[0]" first.gif</PRE><P>
+Will extract the first image (scene 0) from a GIF animation.  Be sure
+to surround the file specification with quotation marks, to prevent
+the shell from interpreting the square brackets.
 </DD><HR>
 <p><a href="../ImageMagick.html"><img SRC="../images/home.png"
 ALT="ImageMagick Home Page" BORDER=0 height=40 width=40
