Add ChannelType enumerations to support CMYKA. Update documentation to change residual mention of LayerType to ChannelType. Update documentation to include ChannelType enumerations supporting CMYKA.

--- a/www/Magick++/STL.html
+++ b/www/Magick++/STL.html
@@ -782,7 +782,7 @@ use this&nbsp; option to specify a header string to print above the image.</font
                     <center><a name="layerImage"></a>
                     <font size="-1">layerImage</font></center>
  </td>
-  <td><font size="-1"><a href="Enumerations.html#LayerType">LayerType</a>
+  <td><font size="-1"><a href="Enumerations.html#ChannelType">ChannelType</a>
  layer_</font></td>
   <td><font size="-1">Extract layer from image. Use this option to extract 
 a particular layer from&nbsp; the image.&nbsp; <i>MatteLayer</i>,&nbsp; for&nbsp;
